# parse-emails

./: .coveragerc  .flake8  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Pipfile  README.md  pyproject.toml  pytest.ini  setup.py
.circleci/: config.yml
.gitlab/: .gitlab-ci.yml  helper_functions.sh
.gitlab/ci/: .gitlab-ci.yml
.hooks/: bootstrap  install.python-poetry.py
Tests/scripts/: gitlab_slack_notifier.py
email_parser/: __init__.py  common.py  constants.py  email_parser.py  handle_eml.py  handle_msg.py
email_parser/tests/: email_parser_test.py
parse_emails/: __init__.py  common.py  constants.py  deencapsulate.py  handle_eml.py  handle_msg.py  parse_emails.py
parse_emails/tests/: parse_emails_test.py
parse_emails/tests/test_data/: None_Funding..eml  chinese_big5_encoding.eml  chinese_email_test.eml  chinese_gb2312_encoding.eml  chinese_gbk_encoding.eml  chinese_iso_2022_jp_encoding.eml  containing_corrupted_eml.eml  eml_contains_htm_content_type.eml  eml_contains_image_as_cid.eml  eml_contains_image_name_with_Thai_characters.eml  eml_non_ascii.eml  eml_with_special_utf_8_chars.eml  invalid_message_id.eml  msg_contains_eml.msg  msg_with_null_characters_in_ascii_decode.msg  msg_with_rtf_compressed.msg  multipart-defective.eml  multipart_with_eml_attachment_containing_html.eml  smime_mime_entity_ascii_crlf.p7m  smime_unicode_issue.p7m  smtp_envelope_headers.eml  test bcc.eml  test-eml-text-html.eml  test-unknown-8bit.eml  test.py  test_text_before_headers.eml  utf_8_email.eml
