[tool.poetry]
name = "parse-emails"
version = "0.1.33"
description = "Parses an email message file and extracts the data from it."
authors = ["Demisto"]
license = "MIT"
classifiers=[
    'Intended Audience :: Developers',
    'Natural Language :: English',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: Implementation :: CPython'
]
readme = "README.md"
packages = [{include = "parse_emails"}]

[tool.poetry.dependencies]
python = "^3.7"
olefile = "*"
datetime = "*"
chardet = "*"
pytest = "*"
python-magic = "*"
compressed_rtf = "*"
RTFDE = "*"
pypandoc = "*"
pip = "*"
pyopenssl = "*"


[tool.poetry.group.dev.dependencies]
pre-commit = "*"
pytest = "*"
pytest-cov = "*"
pytest-datadir-ng = "*"
pytest-mock = "*"
pytest-subprocess = "*"
tox-pyenv = "*"
pipfile-requirements = "*"
flake8 = "*"
coveralls = "*"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
